--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,8 @@
                     <nav class="classy-navbar justify-content-between" id="faithNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="index.html"><img src="img/logo.png" alt=""></a>
+                        <a class="nav-brand" href="index.html"><img src="img/logos.png" style="    height: 96px;
+                            display: flex;" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -104,9 +105,11 @@
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About Us</a></li>
                                     <li><a href="ministries.html">Ministries</a></li>
-                                    <li><a href="sermons.html">Sermons</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="projects.html">Projects</a></li>
+                                    <li><a href="witness.html">Witness Project</a></li>
+                                    <!-- <li><a href="sermons.html">Sermons</a></li> -->
+                                    <!-- <li><a href="blog.html">Blog</a></li> -->
+                                    <li><a href="sure.html">Are you sure?</a></li>
+                                    <li><a href="projects.html">Missions</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
 
@@ -156,19 +159,19 @@
                                     <!-- Single Contact Area -->
                                     <div class="single-contact-area mb-30">
                                         <p>Address:</p>
-                                        <span>3468 Gilbert Station fa-registered <br>Barboursville, VA 22923</span>
+                                        <span>3468 Gilbert Station . <br>Barboursville, VA 22923</span>
                                     </div>
 
                                     <!-- Single Contact Area -->
                                     <div class="single-contact-area mb-30">
                                         <p>Phone:</p>
-                                        <span>(434) 964-2401</span>
+                                        <span>434-760-5740</span>
                                     </div>
 
                                     <!-- Single Contact Area -->
                                     <div class="single-contact-area mb-30">
                                         <p>Email:</p>
-                                        <span>info@lighthousebaptisttemple.org</span>
+                                        <span>pastorlbtc@gmail.com</span>
                                     </div>
                                 </div>
                             </div>
@@ -223,7 +226,7 @@
     <footer class="footer-area">
         <!-- Main Footer Area -->
         <div class="main-footer-area section-padding-100-0 bg-img foo-bg-overlay"
-            style="background-image: url(img/bg-img/bg-1.jpg);">
+            style="background-image: url(img/field-grass-with-sunset-background-photography-wallpapers-1418479560n8g4k.jpg);">
             <div class="container">
                 <div class="row">
 
@@ -231,23 +234,26 @@
                     <div class="col-12 col-sm-6 col-xl-3">
                         <div class="d-flex flex-wrap mb-100">
                             <div class="footer-widget">
-                                <div class="widget-title">
-                                    <a href="#"><img src="img/logo.png" alt=""></a>
+                                <div class="widget-title mr-3">
+                                    <a href="index.html"><img  src="img/logos.png" style="    height: 96px;
+                                        display: flex;" alt=""></a>
                                 </div>
                                 <div class="footer-social-info">
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-pinterest"></i></a>
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                    <a href="#"><i style="color: #0c9423;" class="fa fa-google-plus"></i></a>
+                                    <a href="#"><i style="color: #0c9423;" class="fa fa-pinterest"></i></a>
+                                    <a href="#"><i style="color: #0c9423;" class="fa fa-facebook"></i></a>
+                                    <a href="#"><i style="color: #0c9423;" class="fa fa-twitter"></i></a>
                                 </div>
                             </div>
                             <div class="copywrite-text">
-                                <p>
+                                <p style="color: #0c9423;">
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                    Copyright &copy;<script>
+                                    Copyright &copy;
+                                    <script>
                                         document.write(new Date().getFullYear());
                                     </script> All rights reserved | This website is made with <i class="fa fa-heart-o"
-                                        aria-hidden="true"></i> by <a href="#" target="_blank">Negrita Web Solutions</a>
+                                        aria-hidden="true"></i> by <a href="#" target="_blank"
+                                        style="color: #0c9423;">Negrita Web Solutions</a>
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 </p>
                             </div>
@@ -263,20 +269,20 @@
 
                             <!-- Single Contact Area -->
                             <div class="single-contact-area mb-30">
-                                <p>Address:</p>
-                                <span>3468 Gilbert Station <br>Barboursville, VA 22923 </span>
+                                <p style="color: #0c9423;">Address:</p>
+                                <span>3468 Gilbert Station . <br>Barboursville, VA 22923 </span>
                             </div>
 
                             <!-- Single Contact Area -->
                             <div class="single-contact-area mb-30">
-                                <p>Phone:</p>
-                                <span>(434) 964-2401</span>
+                                <p style="color: #0c9423;">Phone:</p>
+                                <span>434-760-5740</span>
                             </div>
 
                             <!-- Single Contact Area -->
                             <div class="single-contact-area mb-30">
-                                <p>Email:</p>
-                                <span>info@lighthousebaptisttemple.org</span>
+                                <p style="color: #0c9423;">Email:</p>
+                                <span>pastorlbtc@gmail.com</span>
                             </div>
                         </div>
                     </div>
@@ -295,7 +301,6 @@
                                     <li><a href="ministries.html">Ministries</a></li>
                                     <li><a href="projects.html">Projects</a></li>
                                     <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="events.html">Events</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </nav>
@@ -310,7 +315,7 @@
                             </div>
                             <p>We focus on providing an atmosphere for family worship that emphasizes the grace, care,
                                 and compassion that Jesus shows us, and we in turn share with others.</p>
-                            <a href="#" class="btn faith-btn mt-70">Sunday Workship: 10:30 AM</a>
+                            <a href="#" class="btn faith-btn mt-70">Sunday Service: 10:30 AM</a>
                         </div>
                     </div>
                 </div>
@@ -318,6 +323,7 @@
         </div>
     </footer>
     <!-- ##### Footer Area Start ##### -->
+
 
     <!-- ##### All Javascript Script ##### -->
     <!-- jQuery-2.2.4 js -->
